--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "eslint-plugin-react": "^7.37.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
+    "react-select": "^5.9.0",
     "yup": "^1.5.0"
   },
   "devDependencies": {
