--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.67.3",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "eslint-plugin-react": "^7.37.2",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@eslint/config-array": "^0.19.0",
     "@eslint/js": "^9.13.0",
+    "@tanstack/eslint-plugin-query": "^5.67.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
@@ -58,7 +60,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10",
+    "vite": "^6.2.1",
     "vite-plugin-svgr": "^4.3.0"
   },
   "engines": {
