--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.67.3",
+    "@tanstack/react-query-devtools": "^5.67.3",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "eslint-plugin-react": "^7.37.2",
